--- a/setup.cfg
+++ b/setup.cfg
@@ -17,4 +17,11 @@ classifiers =
 
 [options]
 zip_safe = True
+package_dir=
+    =src
+packages = reportabug
 python_requires = >=3.6
+
+[options.entry_points]
+console_scripts =
+    reportabug = reportabug:main
